CHATS_SIT/force-app/main/default/objects/batchsit_t_cbms_addnl_info_hist__x.object
<CustomObject>
    <description>batchsit$t_cbms_addnl_info_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_cbms_addnl_info_hist</externalName>
    <fields>
        <fullName>amt_tanf_income_hh_gross__c</fullName>
        <description>amt_tanf_income_hh_gross</description>
        <externalDeveloperName>amt_tanf_income_hh_gross</externalDeveloperName>
        <label>Gross Household income without TANF</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_cat_activ__c</fullName>
        <description>cde_cat_activ</description>
        <externalDeveloperName>cde_cat_activ</externalDeveloperName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_freq_income__c</fullName>
        <description>cde_freq_income</description>
        <externalDeveloperName>cde_freq_income</externalDeveloperName>
        <label>Income Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_prog__c</fullName>
        <description>cde_prog</description>
        <externalDeveloperName>cde_prog</externalDeveloperName>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_case_chats__c</fullName>
        <description>idn_case_chats</description>
        <externalDeveloperName>idn_case_chats</externalDeveloperName>
        <label>Case ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_case_intfc__c</fullName>
        <description>idn_case_intfc</description>
        <externalDeveloperName>idn_case_intfc</externalDeveloperName>
        <label>CBMS Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_cbms_addnl_info__c</fullName>
        <description>idn_cbms_addnl_info</description>
        <externalDeveloperName>idn_cbms_addnl_info</externalDeveloperName>
        <label>TANF/EF Additional Information ID</label>
        <length>50</length>
        <referenceTargetField>T_CBMS_ADDNL_INFO__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_CBMS_ADDNL_INFO__c</referenceTo>
        <relationshipLabel>TANF EF Details Legacy History</relationshipLabel>
        <relationshipName>TANF_EF_Details_History</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_cbms_addnl_info_hist__c</fullName>
        <description>idn_cbms_addnl_info_hist</description>
        <externalDeveloperName>idn_cbms_addnl_info_hist</externalDeveloperName>
        <label>TANF/EF Additional Information ID Histor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nam_cbms_addnl_info__c</fullName>
        <description>nam_cbms_addnl_info</description>
        <externalDeveloperName>nam_cbms_addnl_info</externalDeveloperName>
        <label>Name Additional Information ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>TANF EF Details History</label>
    <pluralLabel>TANF EF Details History</pluralLabel>
</CustomObject>